Top section done

--- a/index.html
+++ b/index.html
@@ -19,18 +19,21 @@
     <section>
         <div class="half-width">
             <h1>Stay Focused On</h1>
-            <h1><span class="silver-color">Mission 2022</span></h1>
+            <h1><span class="teal-color">Mission 2022</span></h1>
             <p class="description">World Class Method Actor and Billionaire Philanthropist <b>Hero Alom</b> is
                 determined to
                 make an impact in the
                 world of Technology as he goes toe to toe with other tech tycoons such as Elon Musk and Jeff Bezos. Alom
                 plans to create Alom Tech a tech-industry that will immediately become a competitor of mammoth
-                industries such as Tesla and Amazon. Hero Alom will fund this entire project from his own pocket and
-                thus will own 99percent shares of the company. The other remaining shares will go to Sir Ananta Jolil.
+                industries such as Tesla and Amazon. Hero Alom will own 99percent shares of the company. The other
+                remaining shares will go to Sir Ananta Jolil.
             </p>
+            <a class="button" href="https://www.facebook.com/OfficialHeroAlom" target="_blank">Explore More</a>
+
+            <p class="description">Scroll Down to Learn more about Alom and his Projects.</p>
         </div>
         <div class="half-width">
-            <img class="alom1" src="img/person/alom1.png">
+            <img src="img/person/alom1.png">
         </div>
 
     </section>
