--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible-container">
         <div class="half-width">
-            <h1>Stay Focused On</h1>
-            <h1><span class="teal-color">Mission 2022</span></h1>
+            <div class="border">
+                <h1> Stay Focused On</h1>
+                <h1><span class="teal-color"> Mission 2022</span></h1>
+            </div>
             <p class="description">World Class Method Actor and Billionaire Philanthropist <b>Hero Alom</b> is
                 determined to
                 make an impact in the
@@ -37,7 +39,89 @@
         </div>
 
     </section>
+    <section class="mission-area">
+        <div class="center">
+            <h1>Alom's Mission in <span class="teal-color">2022</span></h1>
+        </div>
+        <div class="flexible-container">
+            <div class="one-third mission">
+                <img src="img/illustrators/illustrator-1.png">
+                <h3>Mission</h3>
+                <p>Become a leader of the tech-community and start his own industry that sells sophisticated gadgets.
+                </p>
 
+            </div>
+            <div class="one-third vision">
+                <img src="img/illustrators/illustrator-2.png">
+                <h3>Vision</h3>
+                <p>Prove that the Dhaliwood is better than Hollywood. Finally act beside minnows such as Leonardo
+                    Decaprio and Brad Pitt.
+                </p>
+            </div>
+            <div class="one-third goals">
+                <img src="img/illustrators/illustrator-3.png">
+                <h3>Goals</h3>
+                <p>Win the Oscar for best actor in a leading role and establish himself as the greatest actor in the
+                    universe!
+                </p>
+            </div>
+        </div>
+
+    </section>
+    <section class="flexible-container follower">
+        <div class="half-width">
+            <img src="img/pictures/coding.png">
+        </div>
+        <div class="half-width">
+            <h1>Meet Alom's Followers</h1>
+            <p> Alom has millions of devoted followers who will do anything to help him achieve his
+                goals and accomplish his dreams. Some notable member's of Alom's followers are <b>Donald Trump, Sir
+                    Isaac
+                    Newton, Socrates</b> and <b>Sir Ananta Jalil</b>.
+            </p>
+            <a class="button" href="https://www.facebook.com/OfficialHeroAlom" target="_blank">Become a Follower</a>
+
+        </div>
+    </section>
+    <section class="flexible-container follower">
+        <div class="half-width">
+            <h1>Develop Your Skills With Alom Tech</h1>
+            <p> Hero Alom has created a utopia for all umemployed graduates of the country with the invention of his
+                gigantic tech industry. Joining this fantastic community will not only bring you endless riches but will
+                also assist you in becoming the best version of yourself.
+            </p>
+            <a class="button" href="https://www.facebook.com/OfficialHeroAlom" target="_blank">Drop Your Resume</a>
+
+        </div>
+        <div class="half-width">
+            <img src="img/pictures/project.png">
+        </div>
+
+    </section>
+    <section class="universe">
+        <div class="center">
+            <h1>Avenger <span class="teal-color">Hero Alom</span>!</h1>
+        </div>
+        <div class="flexible-container">
+            <div class="half-width">
+                <img src="img/person/avengers.jpg">
+            </div>
+            <div class="half-width center avenger">
+                <h1>Help Hero Alom become the newest <span class="teal-color">Avenger!</span></h1>
+                <p class="mission-area"> It has been a life long dream of Alom to become an avenger. Make his dream come
+                    true by donating to
+                    our KickStarter!
+                </p>
+                <a class="button" href="https://www.facebook.com/OfficialHeroAlom" target="_blank">Donate all of your
+                    money</a>
+
+            </div>
+        </div>
+    </section>
 </body>
+<footer class="ending">
+    <h1 class="center">MISSION 2022</h1>
+    <p class="center">Hard work, Determination and Perseverance for 2022</p>
+</footer>
 
 </html>
