made final adjustments

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="flexible-container">
+    <section class="flexible-container ">
         <div class="half-width">
             <div class="border">
                 <h1> Stay Focused On</h1>
@@ -120,7 +120,7 @@
     </section>
 </body>
 <footer class="ending">
-    <h1 class="center">MISSION 2022</h1>
+    <h1 class="center">MISSION <span class="teal-color">2022</span></h1>
     <p class="center">Hard work, Determination and Perseverance for 2022</p>
 </footer>
 
